# ivit-sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  create-project.sh  pyproject.toml  requirements.txt  setup.py
.claude/skills/ai-hardware-product-manager/: SKILL.md
.claude/skills/ai-software-product-manager/: SKILL.md
.claude/skills/qa-engineer/: SKILL.md
.claude/skills/software-engineer/: SKILL.md
.claude/skills/system-architect/: SKILL.md
.claude/skills/ux-designer/: SKILL.md
.github/workflows/: release.yml  test.yml
cmake/: Dependencies.cmake
docker/: Dockerfile.build-test  Dockerfile.full  Dockerfile.release-intel  Dockerfile.release-jetson  Dockerfile.release-nvidia  Dockerfile.verify  README.md  build-full.sh  build-test.sh  docker-compose.yml  entrypoint.sh  verify-sdk.sh
docs/: COMPLETE_GUIDE.md  FAQ.md  GETTING_STARTED.md  PERFORMANCE_TUNING.md  README_INFERENCE.md  ROADMAP.md  SMART_RECOMMENDATION_GUIDE.md  USER_GUIDE.md  device-selection.md  faq.md  getting-started.md  hardware-extension.md  integration-test-report.md  performance-tuning.md  user-guide.md
docs/api/: api-spec.md
docs/architecture/: ADR-001-system-architecture.md  adr-001-system.md
docs/deployment/: INTEL_OPENVINO.md  NVIDIA_TENSORRT.md  QUALCOMM_SNPE.md  intel-openvino.md  nvidia-tensorrt.md  release-automation.md
docs/development/: TODO-training-module.md  clean-build-verification.md  prd.md  roadmap.md
docs/tutorials/: CUSTOM_MODEL_GUIDE.md  custom-model.md  training-guide.md
examples/: create_test_data.py
examples/advanced/: smart_recommendation.py  smart_recommendation_example.py
examples/beginner/: README_TRAINING.md  classification_simple.py  classification_training.py  custom_training.py  detection_simple.py  detection_training.py  quick_start.py  run_training.py  segmentation_training.py  test_all_training.py  training_guide.py
examples/cpp/: backend_service.cpp  classification_demo.cpp  data_analysis.cpp  detection_demo.cpp  embedded_optimization.cpp  si_quickstart.cpp  simple_inference.cpp  video_demo.cpp
examples/data/images/: output.json
examples/expert/: custom_training.py
examples/inference/: classification_inference_example.py  detection_inference_example.py  quick_inference_test.py  segmentation_inference_example.py  unified_inference_example.py
examples/python/: 01_quick_start.py  01_quickstart.py  02_classification.py  02_detection.py  02_segmentation.py  03_object_detection.py  ai_developer_training.py  backend_service.py  data_analysis.py  detection_demo.py  embedded_optimization.py  quickstart.py  si_quickstart.py
examples/python/advanced/: ai_developer_training.py  embedded_optimization.py
include/ivit/: ivit.hpp
include/ivit/core/: callback.hpp  common.hpp  device.hpp  model.hpp  result.hpp  runtime_config.hpp  tensor.hpp  video_source.hpp
include/ivit/runtime/: onnx_runtime.hpp  openvino_runtime.hpp  runtime.hpp  tensorrt_runtime.hpp
include/ivit/train/: augmentation.hpp  callbacks.hpp  config.hpp  dataset.hpp  exporter.hpp  train.hpp  trainer.hpp
include/ivit/utils/: profiler.hpp  visualizer.hpp
include/ivit/vision/: classifier.hpp  detector.hpp  segmentor.hpp
ivit/: __init__.py
ivit/core/: __init__.py  base_inference.py  base_trainer.py  yolo_wrapper.py
ivit/inference/: __init__.py  classification_inference.py  detection_inference.py  segmentation_inference.py  unified_inference.py
ivit/trainer/: __init__.py  classification.py  detection.py  segmentation.py
ivit/utils/: __init__.py  dataset_analyzer.py  smart_recommendation.py
packaging/: INSTALL.md  package_sdk.sh.in
python/ivit/: __init__.py  _binding.cpp  _train_binding.cpp  cli.py  devices.py
python/ivit/core/: __init__.py  callbacks.py  config.py  device.py  exceptions.py  model.py  processors.py  result.py  runtime_config.py  types.py
python/ivit/runtime/: __init__.py  base.py  onnx_runtime.py  openvino_runtime.py  tensorrt_runtime.py
python/ivit/train/: __init__.py  augmentation.py  callbacks.py  dataset.py  exporter.py  trainer.py
python/ivit/utils/: __init__.py  metrics.py  profiler.py  video.py  visualizer.py
python/ivit/vision/: __init__.py  classifier.py  detector.py  segmentor.py
python/ivit/zoo/: __init__.py  registry.py
scripts/: build_deb.sh  build_docker.sh  build_tarball.sh  download_deps.sh  release.sh  verify_package.sh
src/core/: callback.cpp  device_manager.cpp  model.cpp  model_manager.cpp  result.cpp  runtime_config.cpp  video_source.cpp
src/runtime/: onnx_runtime.cpp  openvino_runtime.cpp  runtime_factory.cpp  runtime_init.cpp  tensorrt_runtime.cpp
src/train/: augmentation.cpp  callbacks.cpp  dataset.cpp  exporter.cpp  trainer.cpp
src/utils/: profiler.cpp  visualizer.cpp
src/vision/: classifier.cpp  detector.cpp  segmentor.cpp
test_images/: output.jpg.json  output_openvino.jpg.json  output_trt.jpg.json  test_cpp_trt.jpg.json
tests/: conftest.py
tests/cpp/: test_inference.cpp  test_model.cpp  test_train_augmentation.cpp  test_train_dataset.cpp
tests/integration/: test_train_cpp.py  test_training_workflow.py  test_user_scenarios.py
tests/python/: test_api.py  test_core_inference.py  test_zoo_download.py
